--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -107,7 +107,7 @@
 
   .case-study-content {
     width: 100%;
-    padding: 20px;
+    padding: 10%;
 
     @include desktop {
       margin-left: 18px;
