--- a/styles/global/_mixins.scss
+++ b/styles/global/_mixins.scss
@@ -2,6 +2,7 @@ $lg-phone-width: 600px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
 $lg-desktop-width: 1440px;
+$xl-desktop-width: 2000px;
 //if device screen is this big, do stuff
 @mixin lg-phone {
   @media (min-width: #{$lg-phone-width}) {
@@ -23,6 +24,12 @@ $lg-desktop-width: 1440px;
 
 @mixin lg-desktop {
   @media (min-width: #{$lg-desktop-width}) {
+    @content;
+  }
+}
+
+@mixin xl-desktop {
+  @media (min-width: #{$xl-desktop-width}) {
     @content;
   }
 }
