remove portfolio case study, add daily ui case study, add new mockups to showfinder case study

--- a/styles/components/_work.scss
+++ b/styles/components/_work.scss
@@ -4,6 +4,11 @@
 }
 
 //bg images for each individual carousel slide
+#showfinder {
+  background-image: url('../images/showfinder/title.png');
+  background-position: 25%;
+}
+
 #portfolio {
   background-image: url('../images/portfolio/portfolio-code.png');
   background-position: 25%;
@@ -23,6 +28,10 @@
 #proper-knocks
  {
   background-image: url('../images/proper-knocks/ebird.jpg');
+}
+
+#daily-ui {
+  background-image: url('../images/daily-ui/brand.png');
 }
 
 
