--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,10 +5,13 @@
   "global/mixins",
   "global/base",
   "global/helpers",
+  "global/landing-page",
   "global/typography",
   //components
   "components/about",
   "components/case-studies",
+  "components/case-studies-2",
+  "components/cs-title",
   "components/contact",
   "components/footer",
   "components/header",
