--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,17 +1,25 @@
-header {
+.landing-page-header {
+  //sets background image
   background: url('../images/hero.jpg') center center no-repeat;
   background-size: cover;
+  //position relative so the text within will be relative to this box, as the text is also set to relative?  also relative so the absolutely position overlay will movve with it??
   position: relative;
+  // sets the text in the middle horizontally
   text-align: center;
-  color: white;
+  //sets the text in the center vertically - no padding on left/right because there's not room for any and the text is already centered vertically
   padding-top: 100px;
   padding-bottom: 100px;
+  //sets the text color
+  color: white;
+  //makes image take up the whole width (could use 100% instead, or no?)
   width: 100vw;
   @include desktop {
+    //sets all 4 paddings to 150.  could just be
     padding: 150px;
   };
 }
 
+//this is the grey box with half opacity used to darken the image so white text can go on top
 .header-overlay {
   position: absolute;
   top: 0;
@@ -22,25 +30,21 @@ header {
 }
 
 .header-text {
+  //relative to the absolute
   position: relative;
   h1 {
     font-weight: 700;
     font-style: italic;
     text-transform: uppercase;
+    //apparently this opacity is needed so it won't inherit the .4 opacity from the overlay box
     opacity: 1;
   }
   p {
-    font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
     font-style: italic;
+    //controls spacing between heading and sub heading
     margin-top: -20px;
-    font-size: 1.5em;
-    @include tablet {
-      font-size: 2em;
-      margin-top: -20px;
-    };
     @include desktop {
-      font-size: 2.5em;
       margin-top: -30px;
     };
   }
