--- a/styles/components/_skills.scss
+++ b/styles/components/_skills.scss
@@ -1,11 +1,9 @@
 .skills-wrapper {
-  // border: 1px solid red;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items:stretch;
   .skill-wrapper {
-    // border: 1px solid blue;
     flex-basis: 100%;
     text-align: center;
 
@@ -14,10 +12,9 @@
       text-align: left;
     };
     font-weight: 700;
-    h4 {
-      font-family: "roboto condensed", sans-serif;
+    span {
+      font-family: 'Roboto Condensed';
       text-transform: uppercase;
-      font-size: 1.4em;
       font-weight: 700;
       font-style: italic;
     }
