--- a/styles/components/_work.scss
+++ b/styles/components/_work.scss
@@ -5,13 +5,8 @@
 
 //bg images for each individual carousel slide
 #showfinder {
-  background-image: url('../images/showfinder/title.png');
-  background-position: 25%;
-}
-
-#portfolio {
-  background-image: url('../images/portfolio/portfolio-code.png');
-  background-position: 25%;
+  background-image: url('../images/showfinder/hero-wide.png');
+  // background-position: center center;
 }
 
 #tangerine {
@@ -38,6 +33,7 @@
 .work-gallery {
   margin: 30px auto;
   display: flex;
+  //thumbnails arranged vertically on mobile, then switch to horizontal (with wrapping, creating a grid)
   flex-direction: column;
   @include lg-phone {
     flex-direction: row;
@@ -45,19 +41,26 @@
   };
 }
 
+
 .work-thumbnail {
+  //sets background properties for all thumbnails.  the specific background image is set using ids
   background: center center;
   background-size: cover;
+  //position relative so the transparent overlay can be positioned absolutely on top
   position: relative;
-  height: 300px;
+  //define a height since there is no actual content inside div
+  height: 15em;
+  //tells them all to fill up proportionally the same amount of space in a row.  However, if one wraps and there's no others on that last row, it'll grow the whole space
   flex-grow: 1;
+  //flex-basis is 0 by default, which means if you don't set it, a div with no content simply won't appear on the page
+  flex-basis: 100%;
+  //flex basis goes to 30% so that when the screen is bigger, the items fit 3-to-a-row.  30% instead of 33.33% because you don't want a couple pixels of padding somewhere to knock an item to the next row.  flex-grow is on anyways so the items will fill the space.
+  //the featured item has a separate selector that overrides this and makes flex basis 100% so it takes up a whole row
   @include lg-phone {
-    width: 40%;
+    flex-basis: 30%;
   };
-  @include desktop {
-    width: 30%;
-  };
-  @include lg-desktop;
+
+  //defines a transparent grey overlay on the thumbnail, hides it initially
   .work-thumb-overlay {
     transition: linear .25s;
     position: absolute;
@@ -66,9 +69,10 @@
     width: 100%;
     height: 100%;
     background-color: #000;
-    opacity: 0.1;
+    opacity: 0;
     z-index: 100;
   }
+  //makes overlay visible on hover
   &:hover > .work-thumb-overlay {
     @include hover {
       opacity: 0.8;
@@ -76,6 +80,12 @@
       cursor: pointer;
     }
   }
+}
+
+
+.featured-thumbnail{
+  height: 20em;
+  flex-basis: 100%;
 }
 
 .work-thumb-info {
