--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -104,6 +104,7 @@
   position: relative;
   overflow: hidden;
   padding-top: 50%;
+  margin: auto;
   .resp-iframe {
     position: absolute;
     top: 0;
